--- a/template/conf/makefiles.pre
+++ b/template/conf/makefiles.pre
@@ -10,6 +10,9 @@ CI_BOARDS += nucleo-f207zg
 CI_BOARDS += nucleo-f103rb
 CI_BOARDS += nucleo-f091rc
 
+# Connected boards
+CI_CONNECTED_BOARDS = $(patsubst /dev/riot/tty-%,%,$(wildcard /dev/riot/tty-*))
+
 # Common configuration
 CFG_PORT = /dev/riot/tty-$(BOARD)
 CFG_PORT_DEBUG_ADAPTER_ID = $(shell udevadm info -q property $(CFG_PORT) | sed -n '/ID_SERIAL_SHORT/ {s/ID_SERIAL_SHORT=//p}')
