template/boards/makefile: fix board in ci filter

--- a/template/boards/Makefile
+++ b/template/boards/Makefile
@@ -3,7 +3,7 @@ APPLICATION = firmware
 BOARD ?=  native
 include RIOT/Makefile.include
 
-ifeq (,$(filter $(BOARD) native,$(CI_BOARDS)))
+ifeq (,$(filter $(BOARD),$(CI_BOARDS) native))
   $(warning Boards is not know by CI)
   $(error $(CI_BOARDS))
 endif
