--- a/local/makefiles.pre
+++ b/local/makefiles.pre
@@ -3,19 +3,26 @@
 # /dev/riot/tty-$(BOARD)
 
 # STM32 boards
+STM32_BOARDS += p-l496g-cell02
+STM32_BOARDS += nucleo-l496zg
 STM32_BOARDS += nucleo-l432kc
 STM32_BOARDS += nucleo-l152re
 STM32_BOARDS += nucleo-l073rz
+STM32_BOARDS += stm32l0538-disco
 STM32_BOARDS += nucleo-f767zi
+STM32_BOARDS += stm32f723e-disco
+STM32_BOARDS += nucleo-f746zg
 STM32_BOARDS += nucleo-f446re
 STM32_BOARDS += nucleo-f410rb
 STM32_BOARDS += nucleo-f303k8
+STM32_BOARDS += nucleo-f334r8
 STM32_BOARDS += nucleo-f207zg
 STM32_BOARDS += nucleo-f103rb
 STM32_BOARDS += nucleo-f091rc
 
 # NRF2 Boards
-NRF52_BOARDS += nrf52840-mdk
+NRF5x_BOARDS += nrf52840-mdk
+NRF5x_BOARDS += nrf52840dk
 
 # Kinetis Boards
 KINETIS_BOARDS += frdm-kw41z
@@ -23,7 +30,7 @@ KINETIS_BOARDS += frdm-k64f
 
 # All Boards
 LOCAL_BOARDS += $(STM32_BOARDS)
-LOCAL_BOARDS += $(NRF52_BOARDS)
+LOCAL_BOARDS += $(NRF5x_BOARDS)
 LOCAL_BOARDS += $(KINETIS_BOARDS)
 
 
