--- a/template/conf/makefiles.pre
+++ b/template/conf/makefiles.pre
@@ -9,6 +9,7 @@ STM32_BOARDS += nucleo-l496zg
 STM32_BOARDS += nucleo-l432kc
 STM32_BOARDS += nucleo-l152re
 STM32_BOARDS += nucleo-l073rz
+STM32_BOARDS += b-l072z-lrwan1
 STM32_BOARDS += nucleo-f767zi
 STM32_BOARDS += stm32f723e-disco
 STM32_BOARDS += nucleo-f746zg
@@ -21,10 +22,12 @@ STM32_BOARDS += nucleo-f091rc
 
 # NRF5x boards
 NRF5x_BOARDS += nrf52840dk
+NRF5x_BOARDS += nrf52840-mdk
 
 # Kinetis boards
 KINETIS_BOARDS += frdm-kw41z
 KINETIS_BOARDS += frdm-k64f
+KINETIS_BOARDS += pba-d-01-kw2x
 
 # All Boards
 CI_BOARDS += $(STM32_BOARDS)
