--- a/template/conf/makefiles.pre
+++ b/template/conf/makefiles.pre
@@ -50,8 +50,11 @@ ifneq (,$(findstring $(BOARD),$(CI_BOARDS)))
   DEBUG_ADAPTER_ID = $(CFG_PORT_DEBUG_ADAPTER_ID)
 endif
 
-# Allways build in docker
+# Always build in docker
 BUILD_IN_DOCKER = 1
+
+# Always use OPENOCD
+PROGRAMMER = openocd
 
 # Add makefiles post
 RIOT_MAKEFILES_GLOBAL_POST += $(CI_CONF_DIR)/makefiles.post
