--- a/local/makefiles.pre
+++ b/local/makefiles.pre
@@ -25,6 +25,7 @@ ifneq (1,$(DISABLE_LOCAL_BOARDS))
 
 	# NRF2 Boards
 	NRF5x_BOARDS += nrf52840-mdk
+	NRF5x_BOARDS += nrf52dk
 	NRF5x_BOARDS += nrf52840dk
 
 	# Kinetis Boards
