--- a/template/conf/makefiles.pre
+++ b/template/conf/makefiles.pre
@@ -35,11 +35,15 @@ KINETIS_BOARDS += pba-d-01-kw2x
 TI_BOARDS += z1
 TI_BOARDS += remote-revb
 
+# RISC boards
+RISC_BOARDS += hifive1b
+
 # All Boards
 CI_BOARDS += $(STM32_BOARDS)
 CI_BOARDS += $(KINETIS_BOARDS)
 CI_BOARDS += $(NRF5x_BOARDS)
 CI_BOARDS += $(TI_BOARDS)
+CI_BOARDS += $(RISC_BOARDS)
 
 CI_CONNECTED_BOARDS = $(patsubst /dev/riot/tty-%,%,$(wildcard /dev/riot/tty-*))
 
