--- a/template/conf/makefiles.pre
+++ b/template/conf/makefiles.pre
@@ -46,7 +46,7 @@ CI_BOARDS += $(NRF5x_BOARDS)
 CI_BOARDS += $(TI_BOARDS)
 CI_BOARDS += $(RISC_BOARDS)
 
-CI_CONNECTED_BOARDS = $(patsubst /dev/riot/tty-%,%,$(wildcard /dev/riot/tty-*))
+CI_CONNECTED_BOARDS = $(filter $(CI_BOARDS),$(patsubst /dev/riot/tty-%,%,$(wildcard /dev/riot/tty-*)))
 
 .PHONY: list-boards
 list-boards: info-debug-variable-CI_CONNECTED_BOARDS
