add arduino-uno and slstkk3402

--- a/template/conf/makefiles.pre
+++ b/template/conf/makefiles.pre
@@ -41,6 +41,10 @@ RISC_BOARDS += hifive1b
 
 # ARDUINO boards
 ARDUINO_BOARDS += arduino-mega2560
+ARDUINO_BOARDS += arduino-uno
+
+# EFM32 boards
+EFM32_BOARDS += slstk3402a
 
 # All Boards
 CI_BOARDS += $(STM32_BOARDS)
@@ -49,6 +53,7 @@ CI_BOARDS += $(NRF5x_BOARDS)
 CI_BOARDS += $(TI_BOARDS)
 CI_BOARDS += $(RISC_BOARDS)
 CI_BOARDS += $(ARDUINO_BOARDS)
+CI_BOARDS += $(EFM32_BOARDS)
 
 CI_CONNECTED_BOARDS = $(filter $(CI_BOARDS),$(patsubst /dev/riot/tty-%,%,$(wildcard /dev/riot/tty-*)))
 
