--- a/local/makefiles.pre
+++ b/local/makefiles.pre
@@ -50,6 +50,10 @@ ifneq (1,$(DISABLE_LOCAL_BOARDS))
 
   # ARDUINO boards
   ARDUINO_BOARDS += arduino-mega2560
+  ARDUINO_BOARDS += arduino-uno
+
+  # EFM32 boards
+  EFM32_BOARDS += slstk3402a
 
   # All Boards
   LOCAL_BOARDS += $(STM32_BOARDS)
@@ -60,6 +64,7 @@ ifneq (1,$(DISABLE_LOCAL_BOARDS))
   LOCAL_BOARDS += $(TI_BOARDS)
   LOCAL_BOARDS += $(RISC_BOARDS)
   LOCAL_BOARDS += $(ARDUINO_BOARDS)
+  LOCAL_BOARDS += $(EFM32_BOARDS)
 
   # WARNING: the following handling will conflict with applications that have different
   # behaviours depending on the boar used
