--- a/local/makefiles.pre
+++ b/local/makefiles.pre
@@ -2,8 +2,7 @@
 # in `template/70-riotboards.rules` respecting the common configuration of
 # /dev/riot/tty-$(BOARD)
 
-ifneq (1,$(DISABLE_LOCAL_BOARDS))
-
+ifeq (,$(DISABLE_LOCAL_BOARDS)$(TRIBE_CI))
   # STM32 boards
   STM32_BOARDS += p-l496g-cell02
   STM32_BOARDS += nucleo-l496zg
