--- a/local/makefiles.pre
+++ b/local/makefiles.pre
@@ -50,6 +50,7 @@ ifeq (,$(DISABLE_LOCAL_BOARDS)$(TRIBE_CI))
   # ARDUINO boards
   ARDUINO_BOARDS += arduino-mega2560
   ARDUINO_BOARDS += arduino-uno
+  ARDUINO_BOARDS += arduino-due
 
   # EFM32 boards
   EFM32_BOARDS += slstk3402a
