--- a/template/conf/makefiles.pre
+++ b/template/conf/makefiles.pre
@@ -43,6 +43,7 @@ RISC_BOARDS += hifive1b
 # ARDUINO boards
 ARDUINO_BOARDS += arduino-mega2560
 ARDUINO_BOARDS += arduino-uno
+ARDUINO_BOARDS += arduino-due
 
 # EFM32 boards
 EFM32_BOARDS += slstk3402a
