udev/iotlab-m3.conf: add reference

--- a/udev/iotlab-m3.conf
+++ b/udev/iotlab-m3.conf
@@ -1,4 +1,7 @@
 
+# Based on the examples in:
+# https://waterpigs.co.uk/articles/ftdi-configure-mac-linux/
+
 # The Vendor ID and Product ID seem to identify a particular chipset
 # to target. I used the libftdi utilities and OS X USB Prober app to
 # poke around and figure out what numbers to use.
