--- a/template/conf/makefiles.pre
+++ b/template/conf/makefiles.pre
@@ -6,7 +6,7 @@ CI_CONF_DIR := $(abspath $(dir $(lastword $(MAKEFILE_LIST))))
 # STM32 boards
 STM32_BOARDS += nucleo-l496zg
 STM32_BOARDS += nucleo-l432kc
-STM32_BOARDS += stm32l476rg-disco
+STM32_BOARDS += stm32l476g-disco
 STM32_BOARDS += p-l496g-cell02
 STM32_BOARDS += b-l475e-iot01a
 STM32_BOARDS += nucleo-l152re
