--- a/local/makefiles.pre
+++ b/local/makefiles.pre
@@ -57,6 +57,7 @@ ifeq (,$(DISABLE_LOCAL_BOARDS)$(TRIBE_CI))
   ARDUINO_BOARDS += arduino-mega2560
   ARDUINO_BOARDS += arduino-uno
   ARDUINO_BOARDS += arduino-due
+  ARDUINO_BOARDS += arduino-zero
 
   # EFM32 boards
   EFM32_BOARDS += slstk3402a
