--- a/local/makefiles.pre
+++ b/local/makefiles.pre
@@ -6,6 +6,7 @@ ifeq (,$(DISABLE_LOCAL_BOARDS)$(TRIBE_CI))
   # STM32 boards
   STM32_BOARDS += nucleo-l496zg
   STM32_BOARDS += nucleo-l432kc
+  STM32_BOARDS += nucleo-l433rc
   STM32_BOARDS += stm32l476g-disco
   STM32_BOARDS += p-l496g-cell02
   STM32_BOARDS += b-l475e-iot01a
@@ -47,6 +48,7 @@ ifeq (,$(DISABLE_LOCAL_BOARDS)$(TRIBE_CI))
 
   # TI
   TI_BOARDS += z1
+  TI_BOARDS += remote-reva
   TI_BOARDS += remote-revb
   TI_BOARDS += ek-lm4f120xl
 
