--- a/local/makefiles.pre
+++ b/local/makefiles.pre
@@ -37,6 +37,7 @@ ifeq (,$(DISABLE_LOCAL_BOARDS)$(TRIBE_CI))
   NXP_BOARDS += frdm-k64f
   NXP_BOARDS += pba-d-01-kw2x
   NXP_BOARDS += mbed_lpc1768
+  NXP_BOARDS += usb-kw41z
 
   # Iotlab
   IOTLAB_BOARDS += iotlab-m3
