--- a/local/makefiles.pre
+++ b/local/makefiles.pre
@@ -4,6 +4,7 @@
 
 ifeq (,$(DISABLE_LOCAL_BOARDS)$(TRIBE_CI))
   # STM32 boards
+  STM32_BOARDS += p-nucleo-wb55
   STM32_BOARDS += nucleo-l496zg
   STM32_BOARDS += nucleo-l432kc
   STM32_BOARDS += nucleo-l433rc
