--- a/template/conf/makefiles.pre
+++ b/template/conf/makefiles.pre
@@ -4,6 +4,7 @@ CI_CONF_DIR := $(abspath $(dir $(lastword $(MAKEFILE_LIST))))
 # than used in a build
 
 # STM32 boards
+STM32_BOARDS += p-nucleo-wb55
 STM32_BOARDS += nucleo-l496zg
 STM32_BOARDS += nucleo-l432kc
 STM32_BOARDS += nucleo-l433rc
