--- a/template/conf/makefiles.pre
+++ b/template/conf/makefiles.pre
@@ -80,7 +80,7 @@ CI_BOARDS += $(IOTLAB_BOARDS)
 CI_BOARDS += $(ATMEL_BOARDS)
 CI_BOARDS += $(ESP_BOARDS)
 
-CI_CONNECTED_BOARDS = $(filter $(CI_BOARDS),$(patsubst /dev/riot/tty-%,%,$(wildcard /dev/riot/tty-*)))
+CI_CONNECTED_BOARDS = $(sort  $(filter $(CI_BOARDS),$(patsubst /dev/riot/tty-%,%,$(wildcard /dev/riot/tty-*))))
 
 .PHONY: list-boards
 list-boards: info-debug-variable-CI_CONNECTED_BOARDS
