--- a/template/conf/makefiles.pre
+++ b/template/conf/makefiles.pre
@@ -80,13 +80,20 @@ CI_BOARDS += $(IOTLAB_BOARDS)
 CI_BOARDS += $(ATMEL_BOARDS)
 CI_BOARDS += $(ESP_BOARDS)
 
-CI_CONNECTED_BOARDS = $(sort  $(filter $(CI_BOARDS),$(patsubst /dev/riot/tty-%,%,$(wildcard /dev/riot/tty-*))))
+CI_CONNECTED_BOARDS = $(sort $(filter $(CI_BOARDS),$(patsubst /dev/riot/tty-%,%,$(wildcard /dev/riot/tty-*))))
 
-.PHONY: list-boards
+.PHONY: list-boards list-boards-json
+
 list-boards: info-debug-variable-CI_CONNECTED_BOARDS
 
-# Common configuration
+list-boards-json:
+	$(Q)printf "[";
+	$(Q)for board in ${CI_CONNECTED_BOARDS}; do \
+		printf "\"%s\", " $${board}; \
+		done;
+	$(Q)printf "]\n"
 
+# Common configuration
 ifneq (,$(BOARD_INDEX))
   CFG_PORT = /dev/riot/tty-$(BOARD)_$(BOARD_INDEX)
 else
