multiple cleanups and doc fixes, rename TRIBE_CI to RYOT_CI

--- a/udev/iotlab-m3.conf
+++ b/udev/iotlab-m3.conf
@@ -6,6 +6,10 @@
 # to target. I used the libftdi utilities and OS X USB Prober app to
 # poke around and figure out what numbers to use.
 
+# iotlab-m3 do not have a serial written to the ftdi eeprom by default,
+# to configure change the 'serial' field to desired value and:
+#   $ ftdi_eeprom --flash-eeprom iotlab-m3.conf
+
 vendor_id=0x403
 product_id=0x6010
 
