--- a/template/conf/makefiles.pre
+++ b/template/conf/makefiles.pre
@@ -1,84 +1,7 @@
 CI_CONF_DIR := $(abspath $(dir $(lastword $(MAKEFILE_LIST))))
 
-# List of connected boards, there could be more boards connected
-# than used in a build
-
-# STM32 boards
-STM32_BOARDS += p-nucleo-wb55
-STM32_BOARDS += nucleo-l496zg
-STM32_BOARDS += nucleo-l432kc
-STM32_BOARDS += nucleo-l433rc
-STM32_BOARDS += stm32l476g-disco
-STM32_BOARDS += p-l496g-cell02
-STM32_BOARDS += b-l475e-iot01a
-STM32_BOARDS += nucleo-l152re
-STM32_BOARDS += nucleo-l073rz
-STM32_BOARDS += b-l072z-lrwan1
-STM32_BOARDS += i-nucleo-lrwan1
-STM32_BOARDS += nucleo-f767zi
-STM32_BOARDS += stm32f723e-disco
-STM32_BOARDS += nucleo-f746zg
-STM32_BOARDS += nucleo-f446re
-STM32_BOARDS += nucleo-f410rb
-STM32_BOARDS += nucleo-f303k8
-STM32_BOARDS += nucleo-f303re
-STM32_BOARDS += nucleo-f207zg
-STM32_BOARDS += nucleo-f103rb
-STM32_BOARDS += nucleo-f091rc
-
-# NRF5x boards
-NRF5x_BOARDS += nrf52840dk
-NRF5x_BOARDS += nrf52dk
-NRF5x_BOARDS += nrf52840-mdk
-NRF5x_BOARDS += dwm1001
-
-# NXP boards
-NXP_BOARDS += frdm-kw41z
-NXP_BOARDS += frdm-k64f
-NXP_BOARDS += pba-d-01-kw2x
-NXP_BOARDS += mbed_lpc1768
-NXP_BOARDS += usb-kw41z
-
-# TI boards
-TI_BOARDS += z1
-TI_BOARDS += remote-reva
-TI_BOARDS += remote-revb
-TI_BOARDS += openmote-b
-TI_BOARDS += ek-lm4f120xl
-
-# RISC boards
-RISC_BOARDS += hifive1b
-
-# ARDUINO boards
-ARDUINO_BOARDS += arduino-mega2560
-ARDUINO_BOARDS += arduino-uno
-ARDUINO_BOARDS += arduino-due
-ARDUINO_BOARDS += arduino-zero
-
-# EFM32 boards
-EFM32_BOARDS += slstk3402a
-
-# Iotlab
-IOTLAB_BOARDS += iotlab-m3
-
-# Atmel
-ATMEL_BOARDS += samr21-xpro
-ATMEL_BOARDS += atmega256rfr2-xpro
-
-# ESP
-ESP_BOARDS += esp32-wroom-32
-
-# All Boards
-CI_BOARDS += $(STM32_BOARDS)
-CI_BOARDS += $(NXP_BOARDS)
-CI_BOARDS += $(NRF5x_BOARDS)
-CI_BOARDS += $(TI_BOARDS)
-CI_BOARDS += $(RISC_BOARDS)
-CI_BOARDS += $(ARDUINO_BOARDS)
-CI_BOARDS += $(EFM32_BOARDS)
-CI_BOARDS += $(IOTLAB_BOARDS)
-CI_BOARDS += $(ATMEL_BOARDS)
-CI_BOARDS += $(ESP_BOARDS)
+# Include all locally configured boards
+include $(CI_CONF_DIR)/ci-boards.mk
 
 CI_CONNECTED_BOARDS = $(sort $(filter $(CI_BOARDS),$(patsubst /dev/riot/tty-%,%,$(wildcard /dev/riot/tty-*))))
 
@@ -102,7 +25,7 @@ endif
 CFG_PORT_DEBUG_ADAPTER_ID = $(shell udevadm info -q property $(CFG_PORT) | sed -n '/ID_SERIAL_SHORT/ {s/ID_SERIAL_SHORT=//p}')
 
 # Board specific configuration
-ifneq (,$(findstring $(BOARD),$(CI_BOARDS)))
+ifneq (,$(findstring $(BOARD),$(CI_CONNECTED_BOARDS)))
   PORT = $(CFG_PORT)
   DEBUG_ADAPTER_ID = $(CFG_PORT_DEBUG_ADAPTER_ID)
 endif
