--- a/template/conf/makefiles.pre
+++ b/template/conf/makefiles.pre
@@ -3,6 +3,9 @@ CI_CONF_DIR := $(abspath $(dir $(lastword $(MAKEFILE_LIST))))
 # Include all locally configured boards
 include $(CI_CONF_DIR)/ci-boards.mk
 
+# Overrite default board configurations
+include $(CI_CONF_DIR)/ci-boards-configs.mk
+
 CI_CONNECTED_BOARDS = $(sort $(filter $(CI_BOARDS),$(patsubst /dev/riot/tty-%,%,$(wildcard /dev/riot/tty-*))))
 
 .PHONY: list-boards list-boards-json
@@ -17,17 +20,30 @@ list-boards-json:
 	$(Q)printf "]\n"
 
 # Common configuration
-ifneq (,$(BOARD_INDEX))
-  CFG_PORT = /dev/riot/tty-$(BOARD)_$(BOARD_INDEX)
+CFG_PORT_BASE ?= /dev/riot/tty-$(BOARD)
+CFG_PROG_BASE ?= /dev/riot/$(PROGRAMMER)-$(BOARD)
+ifneq (,$(wildcard $(CFG_PORT_BASE)_$(BOARD_INDEX)))
+  CFG_PORT ?= $(CFG_PORT_BASE)_$(BOARD_INDEX)
 else
-  CFG_PORT = /dev/riot/tty-$(BOARD)
+  CFG_PORT ?= $(CFG_PORT_BASE)
 endif
-CFG_PORT_DEBUG_ADAPTER_ID = $(shell udevadm info -q property $(CFG_PORT) | sed -n '/ID_SERIAL_SHORT/ {s/ID_SERIAL_SHORT=//p}')
+ifneq (,$(wildcard $(CFG_PROG_BASE)_$(BOARD_INDEX)))
+  CFG_PROG ?= $(CFG_PROG_BASE)_$(BOARD_INDEX)
+else
+  CFG_PROG ?= $(CFG_PROG_BASE)
+endif
+
+# Use progammer serial if it exists
+ifneq (,$(wildcard $(CFG_PROG)))
+  CFG_DEBUG_ADAPTER_ID ?= $(shell udevadm info -q property $(CFG_PROG) | sed -n '/ID_SERIAL_SHORT/ {s/ID_SERIAL_SHORT=//p}')
+else
+  CFG_DEBUG_ADAPTER_ID ?= $(shell udevadm info -q property $(CFG_PORT) | sed -n '/ID_SERIAL_SHORT/ {s/ID_SERIAL_SHORT=//p}')
+endif
 
 # Board specific configuration
 ifneq (,$(findstring $(BOARD),$(CI_CONNECTED_BOARDS)))
   PORT = $(CFG_PORT)
-  DEBUG_ADAPTER_ID = $(CFG_PORT_DEBUG_ADAPTER_ID)
+  DEBUG_ADAPTER_ID = $(CFG_DEBUG_ADAPTER_ID)
 endif
 
 # Add docker.makefiles.pre
